define _NOREGNAMES before including <machine/asm.h>, like powerpc does.

from dennis.c.ferguson@gmail.com in PR#43022.